<resources>
    <string name="app_name">Multifunctionclock1</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="title">设置定时开关机</string>
    <string name="title2">开启定时开机和关机</string>
    <string name="xingqiyi">星期一</string>
    <string name="xingqier">星期二</string>
    <string name="xingqisan">星期三</string>
    <string name="xingqisi">星期四</string>
    <string name="xingqiwu">星期五</string>
    <string name="xingqiliu">星期六</string>
    <string name="xingqitian">星期天</string>
    <string name="kaiji">开机时间</string>
    <string name="guanji">关机时间</string>

    <string name="submit">提交</string>

    <string name="dialog_title">TECHFIVE_Manager</string>
    <string name="dialog_ver">Ver:</string>
    <string name="dialog_code">Code:</string>
    <string name="dialog_button">FERME</string>

    <string name="dialog_activity_message">离关机还有1分钟，是否继续？</string>
    <string name="dialog_activity_yes">确定</string>
    <string name="dialog_activity_no">取消</string>

    <string name="remind">提示：</string>


    <string name="title_activity_warning_time_dialog">WarningTimeDialogActivity</string>
    <string name="warning">&#032;&#032;&#032;&#032;&#032;&#032;&#032;&#032;离关机时间已经不足1分钟，请做好保存工作，防止数据丢失。</string>
    <string name="notice">温馨提示</string>
    <string name="Iknow">我已经知道</string>
    <string name="notclose">暂时不关机</string>

</resources>
