<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">


    <RelativeLayout android:id="@+id/kaiguan"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView android:id="@+id/title2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/title2"
            android:gravity="center_vertical"
            android:textSize="25dp"/>

        <CheckBox android:id="@+id/checkbox"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical"
            android:textSize="20dp"
            style="@style/MyCheckBox"/>

    </RelativeLayout>

<LinearLayout android:id="@+id/linear"
    android:layout_width="fill_parent"
    android:layout_below="@+id/kaiguan"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="20dp">

<com.elclcd.multifunctionclock.MyLinearLayout
    android:layout_width="wrap_content"
    android:layout_height="100dp">

    <CheckBox android:id="@+id/checkboxtian"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xingqitian"
        android:textSize="20dp"
        />

        <CheckBox android:id="@+id/checkboxyi"
            android:text="@string/xingqiyi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="0"
            android:textSize="20dp"/>

        <CheckBox android:id="@+id/checkboxer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xingqier"
            android:textSize="20dp"/>

        <CheckBox android:id="@+id/checkboxsan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xingqisan"
            android:textSize="20dp"/>
        <CheckBox android:id="@+id/checkboxsi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xingqisi"
            android:textSize="20dp"/>

        <CheckBox android:id="@+id/checkboxwu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xingqiwu"
            android:textSize="20dp"/>
        <CheckBox android:id="@+id/checkboxliu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xingqiliu"
            android:textSize="20dp"/>

</com.elclcd.multifunctionclock.MyLinearLayout>



    </LinearLayout>


    <LinearLayout android:id="@+id/timepickerLinear"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <RelativeLayout android:id="@+id/shijianleft"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/kaiji"
            android:gravity="center"
            android:layout_centerHorizontal="true"/>
        <TimePicker android:id="@+id/timePicker"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            >
        </TimePicker>

        </RelativeLayout>


        <RelativeLayout android:id="@+id/shijianright"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/guanji"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                />
            <TimePicker android:id="@+id/timePicker2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                >
            </TimePicker>

        </RelativeLayout>

    </LinearLayout>


<LinearLayout android:layout_below="@+id/timepickerLinear"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:gravity="center">
    <Button android:id="@+id/buttonSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"/>
</LinearLayout>

<!--
    <LinearLayout android:id="@+id/buttonLin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/timepickerLinear">

        <Button android:id="@+id/button_kaiji"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="开机"/>

        <Button android:id="@+id/button_guanji"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="关机"/>

    </LinearLayout>

-->

</RelativeLayout>
