<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#f5f5f5">

    <TextView android:id="@+id/textMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="#000000"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/dialog_activity_message"/>
<LinearLayout
    android:layout_below="@+id/textMessage"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="20dp">


    <Button  android:id="@+id/button_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:alpha="0.4"
        android:textSize="25sp"
        android:text="@string/dialog_activity_no"/>
    <Button android:id="@+id/button_yes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:alpha="0.4"
        android:textSize="25sp"
        android:text="@string/dialog_activity_yes"/>

</LinearLayout>








</RelativeLayout>
