<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.elclcd.multifunctionclock.WarningTimeDialogActivity">

    <LinearLayout
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/notice"
            android:textColor="#ac374f"
            android:textSize="30sp"
            />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="4dp"
            android:background="#a31d30"></LinearLayout>
    </LinearLayout>

    <TextView android:text="@string/warning" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:id="@+id/dialog_activity_text"
        android:layout_below="@+id/title"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_activity_text"
        android:orientation="horizontal"
        android:id="@+id/linearLayout">
        <View
            android:layout_width="0dp"
            android:layout_height="15dp"
            android:layout_weight="1"
            ></View>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/Iknow"
            android:onClick="doClick"
            android:id="@+id/ikonw"
            android:textSize="24sp"
            android:textColor="#a31d30"
            />
        <View
            android:layout_width="0dp"
            android:layout_height="15dp"
            android:layout_weight="1"
            ></View>



        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/notclose"
            android:onClick="doClick"
            android:id="@+id/stopclose"
            android:textSize="24sp"/>
        <View
            android:layout_width="0dp"
            android:layout_height="15dp"
            android:layout_weight="1"
            ></View>
    </LinearLayout
        >


</RelativeLayout>
