<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#f5f5f5"
    android:padding="20dp">


    <RelativeLayout android:id="@+id/dialog_Layout_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView android:id="@+id/dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_title"
            android:textSize="25sp"/>
        <LinearLayout android:layout_below="@+id/dialog_title"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#dddddd"
            android:layout_marginTop="12dp"
            ></LinearLayout>

    </RelativeLayout>

    <LinearLayout android:layout_below="@+id/dialog_Layout_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="45dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="#a8a8a8"
                android:text="@string/dialog_ver"/>

            <TextView android:id="@+id/dialog_text_ver"
                android:layout_width="wrap_content"
                android:textSize="25sp"
                android:layout_height="wrap_content"
                android:textColor="#a8a8a8"
                android:text="200000"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="#a8a8a8"
                android:text="@string/dialog_code"/>

            <TextView android:id="@+id/dialog_text_code"
                android:layout_width="wrap_content"
                android:textSize="25sp"
                android:textColor="#a8a8a8"
                android:layout_height="wrap_content"
                android:text="10000"/>


        </LinearLayout>

    </LinearLayout>

    <TextView android:id="@+id/dialog_text_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:textSize="25sp"
        android:textColor="#4daaf3"
        android:text="@string/dialog_button"/>



</RelativeLayout>
